# client_rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.de  README.md  build.rs  test.py
.github/workflows/: rust.yml
benches/: baseline.rs  exemplars.rs  family.rs  histogram.rs
benches/encoding/: proto.rs  text.rs
derive-encode/: Cargo.toml
derive-encode/src/: lib.rs
derive-encode/tests/: lib.rs
derive-proto-encode/: Cargo.toml
derive-proto-encode/src/: lib.rs
derive-proto-encode/tests/: lib.rs
derive-register/: Cargo.toml
derive-register/src/: lib.rs
derive-register/tests/: lib.rs
derive-text-encode/: Cargo.toml
derive-text-encode/src/: lib.rs
derive-text-encode/tests/: lib.rs
examples/: .#warp.rs  actix-web.rs  axum-utf-8.rs  axum.rs  axum_with_globals.rs  custom-metric.rs  hyper.rs  io_write.rs  prune.rs  tide.rs
process-collector/: Cargo.toml
process-collector/src/: lib.rs  linux.rs
process-collector/src/linux/: mod.rs  netstat.rs  system.rs
prometheus-client-derive/: Cargo.toml
prometheus-client-derive/src/: lib.rs
prometheus-client-derive/src/registrant/: attribute.rs  field.rs  mod.rs
prometheus-client-derive/tests/: lib.rs
src/: collector.rs  counter.rs  encoding.rs  family.rs  gauge.rs  histogram.rs  label.rs  lib.rs  metrics.rs  registry.rs
src/encoding/: openmetrics_protobuf.rs  prometheus_protobuf.rs  proto.rs  protobuf.rs  text.rs
src/encoding/proto/: metrics.proto
src/metrics/: counter.rs  exemplar.rs  family.rs  gauge.rs  histogram.rs  info.rs  summary.rs
