[package]
name = "prometheus-client"
version = "0.19.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2021"
description = "Open Metrics client library allowing users to natively instrument applications."
license = "Apache-2.0 OR MIT"
keywords = ["openmetrics", "prometheus", "metrics", "instrumentation", "monitoring"]
repository = "https://github.com/prometheus/client_rust"
homepage = "https://github.com/prometheus/client_rust"
documentation = "https://docs.rs/prometheus-client"

[features]
protobuf = ["dep:prost", "dep:prost-types", "dep:prost-build", "dep:void", "prometheus-client-derive-encode/protobuf"]

[workspace]
members = ["derive-encode"]

[dependencies]
dtoa = "1.0"
itoa = "1.0"
parking_lot = "0.12"
prometheus-client-derive-encode = { version = "0.3.0", path = "derive-encode" }
prost = { version = "0.9.0", optional = true }
prost-types = { version = "0.9.0", optional = true }
void = { version = "1.0", optional = true }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
criterion = "0.3"
http-types = "2"
pyo3 = "0.17"
quickcheck = "1"
rand = "0.8.4"
tide = "0.16"
actix-web = "4"

[build-dependencies]
prost-build = { version = "0.9.0", optional = true }

[[bench]]
name = "family"
harness = false

[[bench]]
name = "text"
path = "benches/encoding/text.rs"
harness = false
required-features = []

[[bench]]
name = "proto"
path = "benches/encoding/proto.rs"
harness = false
required-features = ["protobuf"] 
