[package]
name = "open-metrics-client-derive-text-encode"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]
open-metrics-client = { version = "0.6", path = "../" }

[lib]
proc-macro = true