[package]
name = "prometheus-client-derive-text-encode"
version = "0.2.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"
description = "Auxiliary crate to derive text Encode trait from prometheus-client."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/prometheus/client_rust"
homepage = "https://github.com/prometheus/client_rust"
documentation = "https://docs.rs/prometheus-client-derive-text-encode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]
prometheus-client = { path = "../" }

[lib]
proc-macro = true